--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^2.25.0",
+    "gray-matter": "^4.0.3",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "remark": "13",
+    "remark-html": "13"
   },
   "devDependencies": {
     "eslint": "7.32.0",
