--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.16",
+    "@chakra-ui/react": "^1.6.10",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "date-fns": "^2.25.0",
+    "framer-motion": "^4",
     "gray-matter": "^4.0.3",
     "next": "11.1.2",
     "react": "17.0.2",
