--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "framer-motion": "^4",
     "gray-matter": "^4.0.3",
     "next": "11.1.2",
+    "next-mdx-remote": "^3.0.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "reading-time": "^1.5.0",
     "remark": "13",
     "remark-html": "13"
   },
