--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.25.0",
     "framer-motion": "^4",
     "gray-matter": "^4.0.3",
+    "motion": "^10.4.0",
     "next": "11.1.2",
     "next-mdx-remote": "^3.0.6",
     "react": "17.0.2",
@@ -23,7 +24,8 @@
     "react-icons": "^4.3.1",
     "reading-time": "^1.5.0",
     "remark": "13",
-    "remark-html": "13"
+    "remark-html": "13",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
