--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "framer-motion": "^5.4.5",
     "gray-matter": "^4.0.3",
     "motion": "^10.4.0",
-    "next": "11.1.2",
+    "next": "^13.4.4",
     "next-mdx-remote": "^3.0.6",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "reading-time": "^1.5.0",
     "remark": "13",
@@ -30,6 +30,6 @@
   },
   "devDependencies": {
     "eslint": "7.32.0",
-    "eslint-config-next": "^11.1.2"
+    "eslint-config-next": "^13.4.4"
   }
 }
